--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-post",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "post data to server",
   "main": "app.js",
   "bin": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/gavinning/post#readme",
   "dependencies": {
     "aimee-extend": "^1.0.1",
+    "aimee-is": "^1.1.0",
     "colorful": "^2.1.0",
     "commander": "^2.9.0",
     "date-format": "0.0.2",
